src/styles/main.scss
@import '~bulma/bulma.sass';
@import url('http://fonts.cdnfonts.com/css/harry-potter');

body {
  font-family: 'Harry Potter', sans-serif;
  color: black;
}
.wizard-title {
  font-size: 65px;
  text-align: center;
  color: black;
  padding-top: 80px;
}
.card {
  width: calc(25% - 20px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  margin-bottom: 10px;
  box-shadow: 5px 10px 10px #00000075;

  h2 {
    font-size: 25px;
  }
}
.cardImage {
  width: 80%;
}
.card-containers {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  border-radius: 5px;

  #Gryffindor {
    background-color: #380d05;
    color: white;
  }
  #Slytherin {
    background-color: #122416;
    color: #aaaaaa;
  }
  #Hufflepuff {
    background-color: #fff4b1;
  }
}
#Ravenclaw {
  background-color: #222f5b;
  color: #946b2d;
}
.bold {
  font-weight: bolder;
}
.thin {
  font-weight: lighter;
}
.container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;

  h1 {
    font-size: 60px;
    padding: 20px;
  }
}

.myBadge {
  width: 300px;
}
button {
  padding: 20px 30px;
  margin: 10px;
  background-color: #ffffff2f;
  border: none;
  font-family: 'Harry Potter', sans-serif;
  font-size: 30px;
  border-radius: 5px;
}
button:hover {
  background-color: rgba(255, 255, 255, 0.493);
}

#mainPage-Slytherin {
  background-image: url('../assets/SLYTHERINFANCY.jpeg');
  background-size: contain;
}
#titleSlytherin {
  color: #aaaaaa;
}

#navSlytherin {
  background-color: #1a472a;
  .navbar-item {
    color: white;
  }
  a:hover {
    background-color: #2a623d;
  }
}
#mainPage-Gryffindor {
  background-image: url('../assets/GRYFINDORFANCY.webp');
}
#titleGryffindor {
  color: #eeba30;
}
#navGryffindor {
  background-color: #740001;
  .navbar-item {
    color: #eeba30;
  }

  a:hover {
    background-color: #ae0001;
  }
}
#mainPage-Hufflepuff {
  background-image: url('../assets/HUFFLEPUFF.jpeg');
}
#titleHufflepuff {
  color: black;
  background-image: url('../assets/scroll.png');
  background-size: cover;
  line-height: 100px;
  width: 800px;
}
#navHufflepuff {
  background-color: #ffed86;
  .navbar-item {
    color: black;
  }
  a:hover {
    background-color: #fff4b1;
  }
}
#titleRavenclaw {
  color: lightgray;
}
#mainPage-Ravenclaw {
  background-image: url('../assets/RAVENCLAWFANCY.jpeg');
}
#navRavenclaw {
  background-color: #0e1a40;
  .navbar-item {
    color: #946b2d;
  }
  a:hover {
    background-color: #222f5b;
  }
}

.myHousePage {
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  h1 {
    padding-top: 50px;
  }
}
#myHouseBackgroundHufflepuff {
  background-image: url('../assets/HUFFLEPUFF.jpeg');
}
#myHouseBackgroundSlytherin {
  background-image: url('../assets/SLYTHERINFANCY.jpeg');
}
#myHouseBackgroundGryffindor {
  background-image: url('../assets/GRYFINDORFANCY.webp');
}
#myHouseBackgroundRavenclaw {
  background-color: #0e1a40;
  background-image: url('../assets/RAVENCLAWFANCY.jpeg');
  background-repeat: repeat;
  background-size: auto;
}
.paperBackground {
  background-image: url('../assets/PARCHMENT.png');
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  width: 80%;
  margin: auto;
}
.hatBackground {
  background-image: url('../assets/harrypottergreathall.jpeg');
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
}
.hatPage {
  background-image: url('../assets/PARCHMENT.png');
  background-repeat: no-repeat;
  background-size: cover;
  width: 80%;
  margin: auto;
  height: 100vh;
  color: black;
  text-align: center;

  h2 {
    font-size: 25px;
  }

  .hatHolder {
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
    label {
      display: flex;
      flex-direction: column;
      width: 400px;
      align-items: center;
      font-size: 30px;

      input {
        line-height: 30px;
        width: 100%;
        margin-bottom: 50px;
      }
    }
  }
  .hatAndButton {
    display: flex;
    flex-direction: column;
  }

  .sortingHat {
    width: 500px;
    margin: auto;
    animation: pulse 3s ease infinite;
  }
}
.nameBackDrop {
  width: 320px;
}
.nameOnMap {
  position: absolute;
  right: 250px;
  top: 450px;

  .nameText {
    position: absolute;

    right: 20px;
    top: 65px;
    width: 200px;
    text-align: center;
    color: black;
    transform: rotate(-18deg);
    font-size: 23px;
  }
}
.navbar-brand {
  justify-content: space-around;
}
@keyframes pulse {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.05);
  }
  100% {
    transform: scale(1);
  }
}
.gameBackground {
  margin: 0;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: url('../assets/hogwarts.jpeg');
  background-size: cover;
  background-position: bottom;
}

.game-container {
  width: 50%;
  min-width: 600px;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  height: 550px;

  h1 {
    font-size: 50px;
  }
  h2 {
    font-size: 30px;
  }
}
.gameStart {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.game-card {
  text-align: center;
  background-color: rgba(255, 255, 255, 0.219);
  border-radius: 7px;
  height: 300px;
  width: 250px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin: 20px;
  img {
    height: 200px;
  }
}
.gbutton:hover {
  background-color: #7400023a;
  color: white;
}
.hbutton:hover {
  background-color: #fff5b146;
}
.rbutton:hover {
  background-color: #2a623d41;
  color: white;
}
.sbutton:hover {
  background-color: #222f5b2d;
  color: white;
}
.houseButtons {
  width: 100%;
  display: flex;
  justify-content: space-around;
  margin: 5px 0 20px 0;
}
.gameOver {
  font-size: 80px;
  text-align: center;
}
#radio-wrap-Hufflepuff {
  background-color: #ffed86;
  padding: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
}

#radio-wrap-Gryffindor {
  background-color: #740001;
  color: #eeba30;
  padding: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
}

#radio-wrap-Slytherin {
  background-color: #1a472a;
  color: #aaaaaa;
  padding: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
}

#radio-wrap-Ravenclaw {
  background-color: #0e1a40;
  color: #aaaaaa;
  padding: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
}

label {
  padding: 0px 10px;
}

#house-Gryffindor {
  background-color: #740001;
  color: white;
}
#house-Hufflepuff {
  background-color: #ffed86;
  color: black;
}
#house-Slytherin {
  background-color: #1a472a;
  color: white;
}
#house-Ravenclaw {
  background-color: #0e1a40;
  color: white;
}

